--- a/common-packages.tex
+++ b/common-packages.tex
@@ -7,12 +7,12 @@
 \usepackage{float}
 \usepackage{bm}
 \usepackage{xspace}
-\usepackage[usenames,dvipsnames]{color}
+%\usepackage[usenames,dvipsnames]{color}
 \usepackage{tikz}
 \usepackage{xspace}
 \usetikzlibrary{arrows,chains,matrix,positioning,scopes,patterns}
 \usepackage{authblk}
-\usepackage[pdftex,pagebackref]{hyperref}
+%\usepackage[pdftex,pagebackref]{hyperref}
 \usepackage{multirow}
 \usepackage{wasysym}
 %\usepackage{enumitem}
