--- a/prelim/assumptions.tex
+++ b/prelim/assumptions.tex
@@ -1,58 +1,70 @@
-We will use the permutation pairing assumption introduced by Groth and Lu.
+% !TEX root = ../main-ring-signature.tex
+
+We will use the natural translation to asymmetric groups of the permutation pairing assumption introduced by Groth and Lu.
 \begin{definition}[Permutation Pairing Assumption \cite{AC:GroLu07}]\label{def:ppa}
 Let $\mathcal{Q}_{m}=\underbrace{\mathcal{Q}\cat\ldots\cat\mathcal{Q}}_{m\text{ times}}$, where concatenation of  distributions is defined in the natural way and 
 $$\mathcal{Q}: \vecb{a}=\pmatri{x\\x^2},\quad x\gets\Z_q.$$
-We say that the $m$-permutation pairing assumption holds relative to $\G_s$ if for any adversary $\advA$
+We say that the $m$-permutation pairing assumption ($m$-PPA) holds relative to $\G_a$ if for any adversary $\advA$
 $$
 \Pr\left[
 \begin{array}{l}
-gk\gets\G_s(1^\lambda);\matr{A}\gets\mathcal{Q}_{m};[\matr{Z}]\gets\advA(gk,[\matr{A}]):\\
-\mathrm{(i)} \sum_{i=1}^{m}[\vecb{z}_i]=\sum_{i=1}^{m}[\vecb{a}_i], \mathrm{(ii)}\ \forall 1\leq i\leq m\ [z_{2,i}][1]=[z_{1,i}][z_{1,i}],\\
-\text{ and }\matr{Z}\text{ is not a permutation of the columns of }\matr{A}
+	gk\gets\G_a(1^\lambda);\matr{A}\gets\mathcal{Q}_{m};([\matr{Z}]_1,[\underline{\vecb{z}}]_2)\gets\advA(gk,[\matr{A}]_1,[\matr{A}]_2):\\
+	\mathrm{(i)} \sum_{i=1}^{m}[\vecb{z}_i]_1 = \sum_{i=1}^{m}[\vecb{a}_i]_1,\\
+	\mathrm{(ii)}\ \forall 1\leq i\leq m\ [z_{1,i}]_1[1]_2=[1]_1[\underline{z}_{i}]_2 \text{ and } [z_{2,i}]_1[1]_2=[z_{1,i}]_1[\underline{z}_{i}]_2,\\
+	\text{ and }\matr{Z}\text{ is not a permutation of the columns of }\matr{A}
 \end{array}
 \right],
 $$
-where $[\matr{Z}]=[\vecb{z}_1\cat\cdots\cat\vecb{z}_m], [\matr{A}]=[\vecb{a}_1\cat\cdots\cat\vecb{a}_m]\in\GG^{2\times m}$,
-is negligible in $\lambda$.
+where $[\matr{Z}]=[\vecb{z}_1\cat\cdots\cat\vecb{z}_m]_1, [\matr{A}]_1=[\vecb{a}_1\cat\cdots\cat\vecb{a}_m]_1\in\GG_1^{2\times m}$, and $[\underline{\vecb{z}}]_2=\allowbreak[(\underline{z}_1,\ldots,\allowbreak \underline{z}_m)]_2\in\GG_2^{1\times m}$, is negligible in $\lambda$.
 \end{definition}
-Groth and Lu proved the hardness of the permutation pairing assumption in generic bilinear groups \cite{AC:GroLu07}. 
+Groth and Lu proved the hardness of the PPA in generic symmetric bilinear groups \cite{AC:GroLu07}. In Appendix \ref{sec:aPPA-sec-proof} we show that the PPA in generic asymmetric groups is as hard as the PPA in generic symmetric groups.
 
-We recall the definition of the decisional linear assumption (in matrix notation) and the kernel matrix Diffie-Hellman assumption.
+We recall the definition of the Decisional Diffie-Hellman assumption (in matrix notation) and the kernel matrix Diffie-Hellman assumption.
 
-\begin{definition}[Decisional Linear Assumption (DLin)]\label{def:dlin}
+\begin{definition}[Decisional Diffie-Hellman (DDH) in $\GG_s$]\label{def:dlin}
  Let  $\gk 
-\gets \ggen_s(1^\lambda)$ and let
+\gets \ggen_a(1^\lambda)$ and let
 $$
 \matr{A} :=
 \begin{pmatrix} 
-a_1 & 0     \\
-0     & a_2 \\
-1     &  1
+a     \\
+1
 \end{pmatrix},
 \quad
-a_1,a_2\gets\mathbb{Z}_q.
+a\gets\mathbb{Z}_q.
 $$
-We say that the DLin assumption holds relative to $\ggen_s$ if for all PPT adversaries $\advD$
+We say that the DDH assumption holds relative to $\ggen_a$ if for all PPT adversaries $\advD$
 $$
-\adv_{\mathrm{DLin},\ggen_s}(\advD) := |
+\adv_{\mathrm{DDH},\ggen_s}(\advD) := |
 	\Pr[
 		\advD(
 			gk,
-			[\matr{A}],
-			[\matr{A}\vecb{w}])=1]
+			[\matr{A}]_s,
+			[\matr{A}{w}]_s)=1]
 	-\Pr[
 		\advD(
 		gk,
-		[\matr{A}],
-		[\vecb{z}])=1]|
+		[\matr{A}]_s,
+		[\vecb{z}]_s)=1]|
 $$
-is negligible in $\lambda$, where the probability is taken over $gk\gets\ggen_s(1^\lambda)$, $a_1,a_2\gets\ZZ_q$, $\vecb{w}\gets\ZZ_q^2$, $[\vecb{z}]\gets\GG^3$, and the coin tosses of the adversary. 
+is negligible in $\lambda$, where the probability is taken over $gk\gets\ggen_a(1^\lambda)$, $a\gets\ZZ_q$, ${w}\gets\ZZ_q$, $[\vecb{z}]_2\gets\GG^2_s$, and the coin tosses of the adversary.
+We say that the Symmetric eXternal Diffie-Hellman (SXDH) assumption holds if the DDH assumption holds in both $\GG_1$ and $\GG_2$.
 \end{definition}
 
-\begin{definition}[Kernel Diffie-Hellman Assumption in $\GG$ \cite{EPRINT:MorRafVil15}] Let  $\gk 
-\gets\ggen_s(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
-The Kernel Diffie-Hellman assumption in $\GG$ ($\dist_{\ell,k}\mbox{-}\kermdh_{\GG}$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}] \in \GG^{\ell}$, $\vecb{x} \neq \vecb{0}$, such that 
-$[\vecb{x}]^{\top}[\matr{A}]=[\vecb{0}]_T$. 
+We recall a family of assumptions which are weaker than the so called \emph{Matrix Diffie-Hellman} assumptions (a generalization of the DDH and DLin assumptions introduced by Escala et al.~\cite{C:EHKRV13}).
+\begin{definition}[Kernel Diffie-Hellman Assumption in $\GG_s$ \cite{AC:MorRafVil16}] Let  $\gk 
+\gets\ggen_a(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
+The Kernel Diffie-Hellman assumption in $\GG$ ($\dist_{\ell,k}\mbox{-}\kermdh_{\GG}$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]_s$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}]_{3-s} \in \GG^{\ell}_{3-s}$, $\vecb{x} \neq \vecb{0}$, such that 
+$[\vecb{x}]_{3-s}^{\top}[\matr{A}]_s=[\vecb{0}]_T$. 
 \end{definition}
+Although using a different notation, the $Q_m^\top\mbox{-}\kermdh$ in symmetric groups was introduced by Groth and Lu \cite{AC:GroLu07}.
+We will be using a natural translation of the $Q_m^\top\mbox{-}\kermdh$ assumption to asymmetric groups, where  $[\matr{A}]_s$ is also given in $\GG_{3-s}$.  Such assumption is a weaker variant of the $Q_m^\top\mbox{-}\skermdh$, introduced in \cite{AC:GonHevRaf15}, where the adversary might find an element in $\mathrm{Ker}(\matr{A})$ which is splitted between $\GG_1$ and $\GG_2$.
 
-We will be using the $Q_m^\top\mbox{-}\kermdh$ assumption, which was proven secure in the generic bilinear group model by Groth and Lu \cite{AC:GroLu07}.
+\begin{definition}[Split Kernel Diffie-Hellman Assumption \cite{AC:GonHevRaf15}] Let  $\gk 
+\gets\ggen_a(1^\lambda)$ and $\dist_{\ell,k}$ a distribution over $\Z_q^{\ell\times k}$.
+The Split Kernel Diffie-Hellman assumption ($\dist_{\ell,k}\mbox{-}\skermdh$) says that every PPT Algorithm has negligible advantage in the following  game: given $[\matr{A}]_1,[\matr{A}]_2$, where $\matrA \gets \dist_{\ell,k}$, find $[\vecb{x}]_1\in\GG_1^\ell,[\vecb{y}]_2 \in \GG^{\ell}_{2}$, $\vecb{x}\neq\vecb{y}$, such that 
+$[\vecb{x}]_{1}^{\top}[\matr{A}]_1=[\vecb{y}]_2^\top[\matr{A}]_2$. 
+\end{definition}
+ Our weaker variant restrict the adversary to give solutions only in $\GG_1$ (i.e.~$[\vecb{y}]_2=0$), while we simply reffer to it as the $Q_m^\top\mbox{-}\skermdh$.
+
+Groth and Lu proved the hardness of the $Q_m^\top\mbox{-}\kermdh$ assumption in generic symmetric groups, and Gonz\'alez et al.~proved that, in generic asymmetric groups, the $\dist_{\ell,k}\mbox{-}\skermdh$ is as hard as the $\dist_{\ell,k}\mbox{-}\kermdh$ assumption in symmetric groups, for any distribution $\dist_{\ell,k}$. We conclude that the $Q_m^\top\mbox{-}\skermdh$ is hard in generic asymmetric groups (and of course, the weaker variant that we will be using).
